raidboss: fix lippe z-index issue
This fixes #318.

--- a/ui/raidboss/skins/lippe/lippe.css
+++ b/ui/raidboss/skins/lippe/lippe.css
@@ -1,3 +1,13 @@
+#timeline {
+  position: absolute;
+  z-index: 0;
+}
+
+#popup-text-container {
+  position: absolute;
+  z-index: 1;
+}
+
 widget-list /deep/ .timerbar-root {
   border: none;
 }
